# gcp_utils

./: .gcloudignore  .gitignore  .gitmodules  .pypirc  README.md  create_sample.ipynb  main.py  pyproject.toml  requirements.txt  test.ipynb
functions/: main.py  predict.py  preprocess.py  requirements.txt
gcp_utils/: bpm_scaler.pkl  config.ini  constants.py  main.py  mimic3-min-max-2022-11-08.pkl  records_info_1681057902025860479.pkl  requirements.txt
gcp_utils/data/: __init__.py  data.py
gcp_utils/deploy/: deploy_onNewSample.sh  deploy_onValidSample.sh
gcp_utils/functions/: main.py
gcp_utils/functions/deploy/: deploy_onValidSample.sh
gcp_utils/functions/tools/: preprocess.py
gcp_utils/tools/: predict.py  preprocess.py  utils.py
notebooks/: bpm_spo2.ipynb  bpm_testing.ipynb  create_sample.ipynb  del_collection.ipynb  frame_preprocessing.ipynb  get_ordered_idx.py  mock_firestore.ipynb  ppg_sim.ipynb  test.ipynb  test_prod.ipynb  workbench.ipynb
scripts/: create_new_sample.py  create_prediction_sample.py  create_processed_sample.py  deploy.sh  deploy_onCreateWindow.sh  deploy_onNewFrame.sh  deploy_onNewSample.sh  deploy_onUpdateFrame.sh  deploy_onUpdateWindow.sh  deploy_onValidSample.sh  test_prod.py
tests/: test_main.py
