[tool.poetry]
name = "functions"
version = "0.1.0"
description = "Tools for cloud function development."
authors = ["camhpj <cjohnson23@gwu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "3.8.1"
aiosignal = "1.2.0"
async-timeout = "4.0.2"
attrs = "21.4.0"
cachetools = "4.2.4"
certifi = "2021.10.8"
chardet = "4.0.0"
charset-normalizer = "2.0.10"
click = "8.0.3"
flask = "2.0.2"
frozenlist = "1.2.0"
google-api-core = "2.3.2"
google-api-python-client = "2.34.0"
google-auth = "2.3.3"
google-auth-httplib2 = "0.1.0"
google-cloud-core = "2.2.1"
google-cloud-trace = "1.5.1"
googleapis-common-protos = "1.54.0"
grpcio = "1.43.0"
grpcio-status = "1.43.0"
httplib2 = "0.20.2"
idna = "3.3"
itsdangerous = "2.0.1"
jinja2 = "3.0.3"
markupsafe = "2.0.1"
multidict = "5.2.0"
opencensus = "0.8.0"
opencensus-context = "0.1.2"
packaging = "21.3"
proto-plus = "1.19.8"
protobuf = "3.19.1"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pyparsing = "3.0.6"
pytz = "2021.3"
pyyaml = "6.0"
requests = "2.27.1"
rsa = "4.8"
setuptools = "60.3.1"
six = "1.16.0"
uritemplate = "4.1.1"
urllib3 = "1.26.7"
werkzeug = "2.0.2"
wrapt = "1.13.3"
yarl = "1.7.2"
google-cloud-firestore = "<=2.7.3"
keras = "^2.11.0"
heartpy = "^1.2.7"
numpy = "^1.23.5"
scipy = "^1.9.3"
firebase-admin = "^6.0.1"
ipykernel = "^6.19.2"
pandas = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
