[tool.poetry]
name = "gcp-utils"
version = "0.1.0"
description = "Tools for cloud function development."
authors = ["camhpj <cjohnson23@gwu.edu>"]
readme = "README.md"
packages = [{include = "gcp_utils"}]

[tool.poetry.dependencies]
python = "^3.9,<3.10"
google-cloud-firestore = "<=2.7.3"
heartpy = "^1.2.7"
numpy = "^1.23.5"
scipy = "^1.9.3"
firebase-admin = "^6.0.1"
ipykernel = "^6.19.2"
pandas = "^1.5.2"
google-cloud = "^0.34.0"
google-cloud-aiplatform = "^1.21.0"
twine = "^4.0.2"
tqdm = "^4.64.1"
wfdb = "^4.1.0"
vitaldb = "^1.3.1"
heartfelt-tools = "^1.0.4"
pytest = "^7.2.1"
mock = "^5.0.1"
mock-firestore = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
